Update Google Analytics and Migrate Server to ES Modules
- Replace hardcoded Google Analytics tracking ID with direct configuration
- Migrate server.js to ES modules with import/export syntax
- Add `__filename` and `__dirname` polyfills for ES module compatibility
- Simplify serverless handler export

--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>EcoTale</title>
-    <!-- Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=%VITE_GA_ID%"></script>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-L67HLVBWQJ"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
-      gtag('config', '%VITE_GA_ID%');
+
+      gtag('config', 'G-L67HLVBWQJ');
     </script>
   </head>
   <body>
